# flight_status

./: .env  Cargo.toml  LICENSE
docker/: docker-compose.yaml  otel-collector-config.yaml  prometheus.yml
src/: error.rs  flight_search_tool.rs  main.rs  metrics.rs  otel.rs
